2021-10-23  Oliver Kiddle  <opk@zsh.org>

	* 49500: Completion/Linux/Command/_lsns: new completion

2021-10-16  dana  <dana@dana.is>

	* github #79 (tweaked): Xavier Hsinyuan:
	Completion/Unix/Command/_ssh: update options in apple's version
	of ssh-add

2021-10-13  Matthew Martin  <phy1729@gmail.com>

	* 49441: Completion/Unix/Command/_timeout: Add OpenBSD.

2021-10-11  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 49464: Completion/Linux/Command/_basenc: new completion

2021-10-05  Peter Stephenson  <p.stephenson@samsung.com>

	* 49433: Src/parse.c: Assuming EPROG references are bounded by
	function depth is incorrect as we have efficient function copy.

2021-10-04  Bart Schaefer  <schaefer@zsh.org>

	* 49456: Doc/Zsh/mod_private.yo, Doc/Zsh/params.yo,
	Src/Modules/param_private.c, Src/params.c, Test/V10private.ztst:
	clean up detection of private params in nested scopes, update doc

2021-09-28  Oliver Kiddle  <opk@zsh.org>

	* ivan tkachenko: 49440: Doc/Zsh/expn.yo: Make double-flag
	parameter expansion syntax more discoverable in docs

	* ivan tkachenko: 49435: Doc/Zsh/expn.yo: Remove trailing whitespace

	* Alex Xu: 49444: Completion/Unix/Type/_tar_archive:
	libarchive tar can actually extract much more formats

	* Marlon Richert: 49423: Completion/Unix/Command/_gradle:
	Add support for multi-project builds

	* 49454: Completion/compdump: open dump file once only instead
	of reopening it for appends

	* 49450: Src/Zle/compcore.c: don't display explanation with
	compadd -x if any of -D, -A or -O are also used

2021-09-26  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Doc/Zsh/contrib.yo, Doc/Zsh/mod_curses.yo,
	Doc/Zsh/mod_zselect.yo, Test/A05execution.ztst,
	Test/C04funcdef.ztst: Fix typos

2021-09-22  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 49422: Src/Modules/parameter.c, Src/hashnameddir.c, Src/options.c,
	Src/params.c, Src/utils.c: improve support of --disable-dynamic-nss
