@@ -1,5 +1,8 @@
 2021-10-23  Oliver Kiddle  <opk@zsh.org>
 
+	* 49499 based on 49496 by Jun T.: Src/Zle/computil.c
+	Test/Y03arguments.ztst: fixes to option -A of _arguments
+
 	* 49500: Completion/Linux/Command/_lsns: new completion
 
 2021-10-16  dana  <dana@dana.is>
